NgMap implementation. Todo: 1) suppress Markers on direction: so new markers generated by directions don't overlap existing markers. (do not display A B markers) 2) make image of the card fixed size 3) if the infoWindow opened and you click on it's marker, it dissapears 4) configure https? 5) make UI mobile friendly Notes: Favorite and directions icons may not display on local machine and trigger error regarding to Cross origin requests. It's ok.

--- a/Content/Style.css
+++ b/Content/Style.css
@@ -92,6 +92,32 @@ html, body{
           justify-content: center;
 }
 
-.angular-google-map-container { 
-  height: 900px; width: 900px 
+.map {
+    height: 900px; 
+    width: 100%
+}
+.flex-container {
+    padding: 0;
+    margin: 0;
+    list-style: none;
+    display: -webkit-box;
+    display: -moz-box;
+    display: -ms-flexbox;
+    display: -webkit-flex;
+    display: flex;
+    -webkit-flex-flow: row wrap;
+    justify-content: space-around;
+}
+
+.flex-item-map {
+    padding: 5px;
+    width: 55%;
+    height: 100%;
+    margin-top: 10px;
+}
+.flex-item-directions {
+    padding: 5px;
+    width: 43%;
+    height: 100%;
+    margin-top: 10px;
 }
